[gd_scene load_steps=34 format=3 uid="uid://b23we266bfdub"]

[ext_resource type="FontFile" uid="uid://be12gudqqajww" path="res://BLOODY.TTF" id="1_hvf6n"]
[ext_resource type="Script" path="res://RealTOT.gd" id="1_vq0u2"]
[ext_resource type="Script" path="res://Label.gd" id="2_nrdwj"]

[sub_resource type="LabelSettings" id="LabelSettings_d4f70"]
font = ExtResource("1_hvf6n")
font_size = 48

[sub_resource type="Animation" id="Animation_31an5"]
resource_name = "FADE IN"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7n8cp"]
resource_name = "FADE IN_2 (OUT)"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c3ia7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7pyj1"]
resource_name = "Ani"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kswe0"]
_data = {
"Ani": SubResource("Animation_7pyj1"),
"FADE IN": SubResource("Animation_31an5"),
"FADE IN_2 (OUT)": SubResource("Animation_7n8cp"),
"RESET": SubResource("Animation_c3ia7")
}

[sub_resource type="LabelSettings" id="LabelSettings_jjdbo"]
font = ExtResource("1_hvf6n")
font_size = 48

[sub_resource type="Animation" id="Animation_ldjm1"]
resource_name = "FADE IN"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dygxa"]
resource_name = "FADE IN_2 (OUT)"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jvse1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_y80s5"]
resource_name = "Ani2"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33ct4"]
_data = {
"Ani2": SubResource("Animation_y80s5"),
"FADE IN": SubResource("Animation_ldjm1"),
"FADE IN_2 (OUT)": SubResource("Animation_dygxa"),
"RESET": SubResource("Animation_jvse1")
}

[sub_resource type="LabelSettings" id="LabelSettings_dkhx7"]
font = ExtResource("1_hvf6n")
font_size = 48

[sub_resource type="Animation" id="Animation_yljav"]
resource_name = "FADE IN"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f8881"]
resource_name = "FADE IN_2 (OUT)"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_h0fsw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_781ou"]
resource_name = "Ani3"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nb70u"]
_data = {
"Ani3": SubResource("Animation_781ou"),
"FADE IN": SubResource("Animation_yljav"),
"FADE IN_2 (OUT)": SubResource("Animation_f8881"),
"RESET": SubResource("Animation_h0fsw")
}

[sub_resource type="LabelSettings" id="LabelSettings_b1cci"]
font = ExtResource("1_hvf6n")
font_size = 48

[sub_resource type="Animation" id="Animation_r41aq"]
resource_name = "FADE IN"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1megg"]
resource_name = "FADE IN_2 (OUT)"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fpdik"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vd22e"]
resource_name = "Ani4"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4pao"]
_data = {
"Ani4": SubResource("Animation_vd22e"),
"FADE IN": SubResource("Animation_r41aq"),
"FADE IN_2 (OUT)": SubResource("Animation_1megg"),
"RESET": SubResource("Animation_fpdik")
}

[sub_resource type="LabelSettings" id="LabelSettings_2lsow"]
font = ExtResource("1_hvf6n")
font_size = 48

[sub_resource type="Animation" id="Animation_6th2i"]
resource_name = "FADE IN"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u58yd"]
resource_name = "FADE IN_2 (OUT)"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_viapg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hx2qs"]
resource_name = "Ani5"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xooi5"]
_data = {
"Ani5": SubResource("Animation_hx2qs"),
"FADE IN": SubResource("Animation_6th2i"),
"FADE IN_2 (OUT)": SubResource("Animation_u58yd"),
"RESET": SubResource("Animation_viapg")
}

[node name="RealTot" type="CanvasLayer"]
script = ExtResource("1_vq0u2")

[node name="Label1" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "


Don't think you can escape, foul one"
label_settings = SubResource("LabelSettings_d4f70")
horizontal_alignment = 1
script = ExtResource("2_nrdwj")

[node name="Ani1" type="AnimationPlayer" parent="Label1"]
libraries = {
"": SubResource("AnimationLibrary_kswe0")
}

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "


This isn't even my final form"
label_settings = SubResource("LabelSettings_jjdbo")
horizontal_alignment = 1
script = ExtResource("2_nrdwj")

[node name="Ani2" type="AnimationPlayer" parent="Label2"]
libraries = {
"": SubResource("AnimationLibrary_33ct4")
}

[node name="Label3" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "


You were supposed to care about us"
label_settings = SubResource("LabelSettings_dkhx7")
horizontal_alignment = 1
script = ExtResource("2_nrdwj")

[node name="Ani3" type="AnimationPlayer" parent="Label3"]
libraries = {
"": SubResource("AnimationLibrary_nb70u")
}

[node name="Label4" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "


This Still is not my final form, fool"
label_settings = SubResource("LabelSettings_b1cci")
horizontal_alignment = 1
script = ExtResource("2_nrdwj")

[node name="Ani4" type="AnimationPlayer" parent="Label4"]
libraries = {
"": SubResource("AnimationLibrary_h4pao")
}

[node name="Label5" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "


Your anger will be your downfall"
label_settings = SubResource("LabelSettings_2lsow")
horizontal_alignment = 1
script = ExtResource("2_nrdwj")

[node name="Ani5" type="AnimationPlayer" parent="Label5"]
libraries = {
"": SubResource("AnimationLibrary_xooi5")
}
